[Feature #165036044] Enhance app skeletal structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="different_location_images">Different Location Images</string>
     <string name="book_a_train">Book A Train</string>
     <string name="my_tickets">My Tickets</string>
+    <string name="book">Book</string>
+    <string name="book_title">Book A Ticket</string>
 </resources>
