[Feature #165036044] Implement Lifecycle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ticked_id">Ticked Id.</string>
     <string name="departure_time">Departure Time</string>
     <string name="tickets_remaining">Tickets Remaining</string>
+    <string name="tickets_unavailable">No Tickets Available</string>
 </resources>
