[Starts #165036253] User can view ticket once booked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="tickets_remaining">Tickets Remaining</string>
     <string name="tickets_unavailable">No Tickets Available</string>
     <string name="no_new_tickets">No New Tickets</string>
+    <string name="no_booked_tickets">No Booked Tickets</string>
 </resources>
